src/styles.css
body {
  font-family: "Poppins", sans-serif;
  background-color: #acdbe2;
  padding: 20px;
}

.container {
  max-width: 1400px;
  margin: 0 auto;
  padding: 0px 80px;
  background: #d1edf7;
  border-radius: 8px;
}

.grid-2-columns {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 10px;
}

.grid-3-columns {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 10px;
}

.palace {
  width: 90%;
  height: 70%;
  border-radius: 8px;
  margin-left: 50px;
  margin-top: 70px;
}

.text-center {
  text-align: center;
  margin-top: 0;
}

.restaurant {
  background-color: white;
  margin: 30px 0;
}

.restaurant-body {
  padding: 30px;
}

.restaurant-header.grid{
grid-gap:0;
}

.btn {
  display: block;
  color: white;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.5;
  text-align: center;
  letter-spacing: 3px;
  text-transform: uppercase;
  background-color: #036370;
  text-decoration: none;
  margin-top: 20px;
  margin-left: 15px;
  margin-right: 15px;
  padding: 16px 32px;
  border-radius: 10px;
}

section.gallery.grid{
grid-gap:0;  
}

.embed{
  width:100%;
  aspect-ratio:1/1;
}

.embedTwo{
  width:100%;
  border-radius: 8px;
  aspect-ratio:1/1;
}

.pasta {
  width: 100%;
  height: 100%;
  border-radius: 8px;
  display:block;
}

.beach{
  width: 100%;
  height: 100%;
  border-radius: 8px;
  display: block;
  
}

.town{
  width: 100%;
  height: 100%;
  display:block;
  border-radius: 8px; 
}

section {
  max-width: 100%;
  margin: 0 auto;
  padding: 50px;
}

section.secondary {
  background-color: #eff8f8;
  border-radius: 5px;
  margin: 0 auto;
  /* margin-left: 50px;
  margin-right: 60px; */
}
section.secondary h3 {
  font-weight: 620;
}
section.secondary h4 {
  color: #0f52ba;
}
section.secondary h5 {
  color: #0f52ba;
}

header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)),
    url("../images/corfu-header.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  text-align: center;
  padding: 200px 0;
}

header h1 {
  font-weight: 700;
  font-size: 80px;
  line-height: 1;
  margin: 30px 0;
}

header h2 {
  font-weight: 300;
  font-size: 30px;
  line-height: 1.5;
  margin: 0;
}
header h3 {
  font-weight: 800;
  font-size: 20px;
  line-height: 1.5;
  letter-spacing: 5px;
  margin: 0;
}
header a {
  font-weight: 700;
  font-size: 14px;
  line-height: 1.5;
  text-align: center;
  letter-spacing: 3px;
  text-transform: uppercase;
  color: #036370;
  background-color: white;
  text-decoration: none;
  display: inline-block;
  margin-top: 32px;
  padding: 16px 32px;
  border-radius: 10px;
}

main {
  background-color: #e7f5fa;
}

main h2 {
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
  margin: 0;
  letter-spacing: 5px;
  color: #022735;
  opacity: 0.4;
  text-transform: uppercase;
}

main h3 {
  font-weight: 700;
  font-size: 40px;
  line-height: 1.5;
  color: #1c4293;
  margin: 0;
}

main h4 {
  font-weight: 700;
  margin-top: 24px;
  line-height: 1;
  color: #022735;
  margin: 0;
}

main h5 {
  font-weight: 700;
  font-size: 13px;
  line-height: 1;
  color: #022735;
  margin: 0;
}

main p {
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 1.5;
  color: #022735;
  opacity: 0.7;
}

footer {
  background-image: linear-gradient(
      rgba(39, 32, 68, 0.8),
      rgba(39, 32, 68, 0.7)
    ),
    url("../images/CorfuBeach.png");
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  padding: 40px 20px;
}

footer h4 {
  font-weight: 600;
  font-size: 20px;
  line-height: 1.5;
  margin: 0 0 10px 0;
}

footer p {
  font-weight: 400;
  font-size: 13px;
  opacity: 0.7;
  line-height: 22px;
  margin: 0 0 10px 0;
  max-width: 95%;
}

footer ul {
  margin: 0;
  padding: 0;
}

footer li {
  list-style: none;
  margin: 0 0 5px 0;
  padding: 0;
}

footer a {
  color: white;
  opacity: 0.7;
  font-size: 13px;
  text-decoration: none;
}

footer a:hover {
  font-style: italic;
  text-decoration: wavy underline;
}

footer .footer-grid {
  display: grid;
  grid-template-columns: 1fr 2fr 2fr;
  grid-gap: 40px;
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 40px;
}

@media (max-width: 960px) {
  header {
    padding: 60px 0;
  }
  header h1 {
    font-size: 40px;
    margin: 20px 0;
  }
  header h2 {
    font-size: 15px;
    margin: 0;
  }
  header h3 {
    font-size: 10px;
    letter-spacing: 3px;
    margin: 0;
  }
  header a {
    font-size: 8px;
    padding: 10px 20px;
    margin-top: 16px;
  }
  .grid {
    grid-template-columns: 1fr;
    grid-gap: 20px;
  }

  .restaurant-header img{
    display:none; 
  }

  .embed{
    aspect-ratio:16/9;  
  }
  
  .palace {
    width: 100%;
    height: 100%;
    border-radius: 8px;
    margin: 0 auto;
  }
  main {
    text-align: center;
  }
  section {
    padding: 30px;
  }
  footer {
    text-align: center;
    padding: 40px 20px;
  }
  footer .footer-grid {
    grid-template-columns: 1fr;
    text-align: center;
    padding: 0 20px;
  }
  footer p {
    margin: 20px 0 0 0;
    max-width: 100%;
  }
  footer a {
    display: inline-block;
    margin: 0;
    padding: 0;
  }
}

